Actualizar Voleibol.html

--- a/Voleibol.html
+++ b/Voleibol.html
@@ -23,7 +23,7 @@
             El voleibol es un deporte de equipo que se juega entre dos grupos de seis jugadores, separados por una red.
             El objetivo es pasar el balón por encima de la red para que toque el suelo del campo contrario, evitando que el rival lo devuelva.
           </p>
-          <img src="imágenes\Pensandoo.jpeg" alt="Voleibol" class="imagen-redonda">
+          <img src="imagenes\Pensandoo.jpeg" alt="Voleibol" class="imagen-redonda">
         </section>
     
         <section class="reglas">
