Actualizar Natación.html

--- a/Natación.html
+++ b/Natación.html
@@ -23,7 +23,7 @@
         La natación es un deporte que consiste en desplazarse en el agua utilizando el movimiento de brazos y piernas.
         Es una actividad completa que trabaja casi todos los músculos del cuerpo, mejora la resistencia y fortalece la capacidad pulmonar.
       </p>
-      <img src="imágenes\Pensando.jpeg" alt="Snoopy Pensando" class="imagen-redonda">
+      <img src="imagenes\Pensando.jpeg" alt="Snoopy Pensando" class="imagen-redonda">
     </section>
 
     <section class="reglas">
